[package]
name = "sark_grids"
version = "0.5.4"
edition = "2021"
authors = ["sark"]
homepage = "https://github.com/sarkahn/sark_grids_rs"
repository = "https://github.com/sarkahn/sark_grids_rs"
license = "MIT"
readme = "README.md"
keywords = ["2d", "grid", "sparse_grid"]
description = "A set of grids for storing and accessing data in a grid-like way."

[dependencies]
glam = "0.21"
itertools = "0.10.3"
